feat: LMS updates — B2C YouTube catalog, thumbnails API, security/CORS, dashboard, CourseBrowse UI
- Backend: B2C JSON catalog, media sync, CourseService/LessonService thumbnail resolution
- Root API endpoint + permit GET / and OPTIONS for CORS; start-local.ps1 frees port 8081
- Frontend: Navbar, CourseBrowse, progress API client, session expiry handling
- Tests: H2 dialect for integration tests; docs and schema additions

Made-with: Cursor