@@ -1,30 +1,40 @@
 package com.learnova.security;
 
 import com.learnova.entity.User;
+import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import java.util.stream.Collectors;
 
 @Getter
+@AllArgsConstructor
 public class UserPrincipal implements UserDetails {
 
     private final Long id;
     private final String email;
-    private final String password;
+    private final String passwordHash;
     private final Collection<? extends GrantedAuthority> authorities;
 
-    public UserPrincipal(User user) {
-        this.id = user.getId();
-        this.email = user.getEmail();
-        this.password = user.getPasswordHash();
-        this.authorities = user.getRole() != null
-            ? List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
-            : List.of();
+    public static UserPrincipal from(User user) {
+        Collection<GrantedAuthority> authorities = Collections.singletonList(
+            new SimpleGrantedAuthority("ROLE_" + user.getRole().name())
+        );
+        return new UserPrincipal(
+            user.getId(),
+            user.getEmail(),
+            user.getPasswordHash(),
+            authorities
+        );
+    }
+
+    @Override
+    public String getPassword() {
+        return passwordHash;
     }
 
     @Override
